app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_self
 *= stub active_admin.scss
 *= require lightbox
 *= require albums
 */
@import "bootstrap";
@import 'lightbox';

body {
  padding-top: 65px;
}

.bg-danger {
  background-color: red !important;
}
.navbar-toggler:not(:disabled):not(.disabled) {
  padding: 10px !important;
}

.link-inherit a, .link-inherit a:hover {
  color: inherit;
  text-decoration: none;
}

nav.navbar.bg-dark {
  background: #fd7621 !important; 
  background-image: image-url('ram-ram.png') !important;
}

.ram {
  background-image: image-url('ram-ram.png') !important;
  background-position: center  !important;
}
.navbar {
  padding-top: 0.2rem;
  padding-bottom: 0.2rem;
  .logo {
  	margin: 0px;
  	padding: 0;
    position: relative;
    .logo-img {
      width: 60px;
      height: 60px;
      border-radius: 50%;
      border: 2px solid #fff200;
      /*background: image-url('shree-parivar-change.jpg');*/
      background-size: 125%;
      background-position: center;
      display: inline-block;
      img {width: 100%; margin: 0;}
    }
  	
  }
}

.logo-content, .logo-content:hover {
  color: #fff;
  text-decoration: none;
  margin-left: 10px;
  padding-top: 4px;
  position: absolute;
  top: 0;
  bottom: 0;
  margin-top: auto;
  margin-bottom: auto;
  height: 40px;
  span {
    display: block;
    font-size: 12px;
    line-height: 18px;
  }
  span:first-child {
    font-size: 22px;
  }
}

.color-white {
	color: #fff;
}

.btn-product{
	width: 100%;
}

.pagehead {
	padding: 0;
	background: image-url('innovative.jpg');
	background-color: red;
	position: relative;
	&:after {
		content: '';
		display: block;
		width: 100%;
		height: 100%;
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;
		position: absolute;
		background: rgba(0,0,0,0.6);
		z-index: 0;
	}
	.titlehead {
		padding: 20px 0;
	    color: #fffffc;
	    position: relative;
	    z-index: 1;
	    font-size: 40px;
	    text-align: center;
	    text-shadow: 1px 1px 0px #000;
	    text-transform: uppercase;
	}
}

.content-area{
  background-image: image-url('math-view.jpg');
  background-size: 100%;
  background-position: center;
  .content-area-box {
    background-color: rgba(255,255,255, 0.8)
  }
}

.programs-box {
  background-image: image-url('math-view.jpg');
  background-size: 100%;
  background-position: center;
  .bg-warning {
    background-color: rgba(255, 193, 7, 0.64) !important;
  }
}

.starter-template {
  padding: 1rem 1.5rem;
  text-align: center;
  h1 {
    font-size: 24px;
    color: #fff;
  }
}
.blog-footer {
    padding: 1.5rem 0;
    color: #fff;
    text-align: center;
    background-color: #ffc107;
    border-top: .05rem solid #dc3545;
}

.form-control {
  border-color: #dc3545;
}

h5.display-4 {
	font-size: 2.35rem;
}
h3.display-5 {
	font-size: 1.17em;
}

.carousel-caption  {
  padding-top: 0;
  padding-bottom: 0px;
  h1 {
    color: white;
    margin-bottom: 0;
    font-size: 22px;
    background: rgba(0, 0, 0, 0.58);
    border-radius: 24px;
    border: 2px dashed #fd7621;
    padding: 10px;
  }
}

.programs {
  text-align: center;
  width: 75%;
  color: #fff;
  margin: 0 auto;
  border: 10px solid rgba(255, 0, 0, 0.58);
  padding-bottom: 20px;
  border-radius: 15px;
  h2 {
    background: #ff000094;
    padding: 0px 10px 10px;
    font-size: 4vh;
  }
  p {
    background: rgba(255, 255, 255, 0.74);
    padding: 5px;
    margin: 20px 20px 0;
    font-size: 3vh;
    color: #000;
    font-weight: bold;
    border-radius: 10px;
    border: 2px solid orangered; 
    a {
      color: red;
    }
  }
}

.math-sthans {
  h3 {
    color: yellow;
  }
}

.footer-area {
  background: image-url('footer-bg.jpg');
  background-size: 100%;
  background-position: bottom;
}

.contact-ftr {
  background: rgba(255, 193, 7, 0.5) !important;
}

.address-box {
  background: rgba(241,204,73,0.5);
}

.time-box {
  position: absolute;
  top: 0;
  text-align: center;
  line-height: 15px;
  left: 222px;
  font-size: 11px;
  line-height: 12px;
  color: #fff;
  height: 66px;
  display: flex;
  align-items: center;
  overflow: hidden;
  div {
    text-align: center;
    width: 100%;
    display: block;
  }
  .day {
    display: block;
  }
  .month, .day, .tithi {
  font-size: 9px;
  }
  .times-kaal, .tithi {
    display: block;
    color: yellow;
  }
  .tithi {
    word-break: break-all;
    width: 100%;
    color: yellow;
    max-width: 90px;
  }
}

.suvichar-box {
  p {
    margin-bottom: 5px;
    font-size: 12px;
  }
}

.suvichar-bg {
  background: image-url('suvichar-bg.jpg');
  background-repeat: repeat;
  background-position: top;
  border-radius: 20px;
}

.flower-bg {
  background: image-url('tropical_flowers.jpg');
  background-repeat: repeat;
  background-position: top;
}

.suvichar-content {
  position: relative;
  &.btm-space {
    padding-bottom: 20px !important;
  }
  .svr-item {
    overflow: hidden;
    height: 20px;
    p, h2, h1, h3, h4, h5, h6, div{
      line-height: 14px;
    }
    p:last-child, h2:last-child, h1:last-child, h3:last-child, h4:last-child, h5:last-child, h6:last-child, div:last-child {
      margin-bottom: 0 !important;
    }
  }
  .read-more {
    position: absolute;
    bottom: -2px;
    left: 0;
    right: 0;
    margin: auto;
    z-index: 99;
    font-size: 10px;
    width: 50px;
    color: white;
  }
}

.decoration:before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: image-url('decoration-top.png');
  background-size: 100%;
  background-position: 0 -10px;
  background-repeat: no-repeat;
  z-index: 1
}

.decoration:after {
  content: '';
  display: block;
  position: absolute;
  bottom: -17px;
  left: 0;
  right: 0;
  background: image-url('phul.png');
  background-size: 70%;
  background-position: center bottom;
  background-repeat: no-repeat;
  z-index: 3;
  height: 100px;
}

.decoration.sarovar:before, .decoration.sarovar:after, .decoration.gaushala:before, .decoration.gaushala:after {
  content: none !important;
}

@media(max-width:992px) {
  .navbar-dark {
    .navbar-nav {
      .nav-link {
        text-align: center;
      }
    }
  }
  .carousel-caption  {
    bottom: 10px;
    h1 {
      border-radius: 8px;
      border-width: 1.5px;
      padding: 4px;
      font-size: 14px;
    }
    h2, p {
      padding: 4px;
      font-size: 14px;
      margin-bottom: 4px;
    }
  }
  .programs {
    margin-top: 2vh;
    width: 90%;
    h2 {
      font-size: 24px;
    }
    p {
      font-size: 12px;
      margin: 10px;
      span {
        display: block;
      }
    }
    a.btn.btn-danger.mt-4 {
      margin-top: 0.7rem !important;
    }
  }
  .logo-content {
    display: inline-block;
    width: 56%;
    img {
      width: 90%;
    }
  }
  .starter-template {
    padding: 1rem 1.5rem;
    h1 {
      font-size: 4vh;
      margin-bottom: 0;
    }
  }

  .footer-texts span {
    display: block;
  }

  .lb-nav a.lb-prev, .lb-nav a.lb-next {
    opacity: 1 !important;
  }
}


@media(max-width:768px) {
  .starter-template {
    padding: 1rem 1.5rem;
  }
}
@media(max-width:370px) {
  .month, .day, .date, .year {
    display: none !important;
  }
  .time-kaal {
    display: block !important;
  }
}

@media(max-width:340px) {
	.logo img {
	    width: 210px;
	}
	h5.display-4 {
	    font-size: 2rem;
	}
  .logo-content {
    display: inline-block;
    width: 50%;
  }
}

